--- a/fixme.css
+++ b/fixme.css
@@ -14,11 +14,11 @@ Corrige los errores
 
 */
 
-@media-query (min-size: 769px) {
+@media (min-size: 769px) {
   h1 {
-    font-size : 25px; 
+    font-size: 25px; 
   }
   .contenedor {
-    padding: 20px
+    padding: 20px;
   }
 }
